a few changes/fixes

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -12,20 +12,21 @@ My name is Aidan Roberts, and I'm 19 years old. I have always had a passion for 
 </p>
 <h2>Overwatch</h2>
 <p>
-I am also on the D2 Overwatch team here as a Main Tank. 
+I am on the D1 Overwatch team at RIT as a Substitute for the Tank role.
 </p>
 
 <h2>Current favorite games:</h2>
 <ul>
 <li>Team Fortress 2</li>
 <li>Overwatch</li>
-<li>Borderlands 2 (currently waiting the 6 months for the Steam release)</li>
+<li>Borderlands 2</li>
 <li>Risk of Rain 2</li>
+<li>(apparently a lot of things with 2)</li>
 </ul>
 
 <p>
 <a href=../index.html>Back</a>
 </p>
-<footer>&copy; Aidan Roberts, 2019</footer>
+<footer>&copy; Aidan Roberts, 2020</footer>
 </body>
 </html>
