--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 <meta charset="utf-8" />
-<title> Aidan Roberts' 110 Page </title>
+<title> Aidan Roberts </title>
 </head>
 <body>
-<h1> Aidan Roberts' 110 Page </h1> </br>
-<img src="media/mugshot.jpg" alt="Mugshot"> </br>
+<h1> Aidan Roberts </h1>
+<h2> Game Developer </h2> </br>
+<img src="media/headshot.jpg" alt="Headshot"> </br>
 This is my IGME-110 course page. <!--This is the course page for Aidan Roberts for 110 -->
 
 <p> Links to some of my stuff: </br>
 <ul>
 <li><a href=aboutme/aboutme.html>About Me</a> </li>
-<li><a href=paper/paper.html>TF2 Research Paper</a></br></li>
 <li><a href=https://www.twitch.tv/fr35h_tv>Twitch</a></br></li>
 </ul> </p>
 
-<footer>&copy; Aidan Roberts, 2019</footer>
+<footer>&copy; Aidan Roberts, 2020</footer>
 </body>
 </html>
