revamped home page and style sheet

--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-<meta charset="utf-8" />
-<title> Aidan Roberts </title>
-</head>
-<body>
-<h1> Aidan Roberts </h1>
-<h2> Game Developer </h2> </br>
-<img src="media/headshot.jpg" alt="Headshot"> </br>
-This is my IGME-110 course page. <!--This is the course page for Aidan Roberts for 110 -->
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+			<meta charset="utf-8" />
+			<title> Aidan Roberts </title>
+		</head>
+		<body>
+			<header>
+				<div class = "main">
+					<ul>
+						<li>
+							<a href="#">Home</a>
+						</li>
+						<li>
+							<a href=aboutme/aboutme.html>About</a>
+						</li>
+						<li>
+							<a href="#">My Work</a>
+						</li>
+						<li>
+							<a href="#">Resume</a>
+						</li>
+					</ul>
+				</div>
+				<center>
+					<br>
+						<br>
+							<h1> Aidan Roberts </h1>
+							<h2> Game Developer </h2>
 
-<p> Links to some of my stuff: </br>
-<ul>
-<li><a href=aboutme/aboutme.html>About Me</a> </li>
-<li><a href=https://www.twitch.tv/fr35h_tv>Twitch</a></br></li>
-</ul> </p>
+							<br>
+								<br>
+									<br>
+										<img src="media/headshot.jpg" alt="Headshot">
+										</center>
+									</header>
 
-<footer>&copy; Aidan Roberts, 2020</footer>
-</body>
-</html>
+									<!--<footer>&copy; Aidan Roberts, 2020</footer>-->
+								</body>
+							</html>
