--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<a href="#">My Work</a>
 						</li>
 						<li>
-							<a href="#">Resume</a>
+							<a href=resume/Resume.pdf>Resume</a>
 						</li>
 					</ul>
 				</div>
