added pics, made site beautiful

--- a/index.html
+++ b/index.html
@@ -8,34 +8,29 @@
 		<body>
 			<header>
 				<div class = "main">
-					<ul>
-						<li>
-							<a href="#">Home</a>
-						</li>
-						<li>
-							<a href=aboutme/aboutme.html>About</a>
-						</li>
-						<li>
-							<a href="#">My Work</a>
-						</li>
-						<li>
-							<a href=resume/Resume.pdf>Resume</a>
-						</li>
-					</ul>
-				</div>
-				<center>
-					<br>
-						<br>
-							<h1> Aidan Roberts </h1>
-							<h2> Game Developer </h2>
+					<div class = "logo">
+						<img src="media/logo.png" alt="Logo">
+						</div>
+						<ul>
+							<li class="active">
+								<a href="#">Home</a>
+							</li>
+							<li>
+								<a href=aboutme/aboutme.html>About</a>
+							</li>
+							<li>
+								<a href="#">My Work</a>
+							</li>
+							<li>
+								<a href=resume/Resume.pdf>Resume</a>
+							</li>
+						</ul>
+					</div>
+					<div class="title">
+						<img src="media/name.png" alt="Name">
+						</div>
+					</header>
 
-							<br>
-								<br>
-									<br>
-										<img src="media/headshot.jpg" alt="Headshot">
-										</center>
-									</header>
-
-									<!--<footer>&copy; Aidan Roberts, 2020</footer>-->
-								</body>
-							</html>
+					<!--<footer>&copy; Aidan Roberts, 2020</footer>-->
+				</body>
+			</html>
