--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href=../mystyle.css>
+		<link rel="stylesheet" type="text/css" href=../style.css>
 			<meta charset="utf-8" />
-			<title> About Me </title>
+			<title> Aidan Roberts - About </title>
 		</head>
-		<body>
-			<h1>About Me</h1>
-			<p>
-My name is Aidan Roberts, and I'm 19 years old. I have always had a passion for video games, whether it's playing casually or professionally, or even creating them. I'm majoring in Game Design & Development at Rochester Institute of Technology.
-			</p>
-			<h2>Overwatch</h2>
-			<p>
-I am on the D1 Overwatch team at RIT as a Substitute for the Tank role.
-			</p>
 
-			<h2>Current favorite games:</h2>
-			<ul>
-				<li>Team Fortress 2</li>
-				<li>Overwatch</li>
-				<li>Borderlands 2</li>
-				<li>Risk of Rain 2</li>
-				<li>(apparently a lot of things with 2)</li>
-			</ul>
+		<header class="aboutme">
+			<div class = "main">
+				<div class = "logo">
+					<img src="../media/logo.png" alt="Logo">
+					</div>
+					<ul>
+						<li>
+							<a href=../index.html>Home</a>
+						</li>
+						<li class="active">
+							<a href="#">About</a>
+						</li>
+						<li>
+							<a href="#">My Work</a>
+						</li>
+						<li>
+							<a href=resume/Resume.pdf>Resume</a>
+						</li>
+					</ul>
+				</div>
 
-			<p>
-				<a href=../index.html>Back</a>
-			</p>
-			<footer>&copy; Aidan Roberts, 2020</footer>
-		</body>
-	</html>
-	
+				<div class="about">
+					<h1>About Me</h1>
+					<p>
+					My name is Aidan Roberts, and I'm 19 years old. I have always had a passion for video games, whether it's playing casually or professionally, or even creating them. I'm majoring in Game Design & Development at Rochester Institute of Technology.
+					</p>
+					<br>
+						<h2>Overwatch</h2>
+						<p>
+					I am on the D1 Overwatch team at RIT as a Substitute for the Tank role.
+						</p>
+					</div>
+					<div class="headshot">
+						<img src="headshot.jpg" alt="Headshot">
+						</div>
+					</header>
+				</html>
+				
