--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<title> Aidan Roberts </title>
 		</head>
 		<body>
-			<header>
+			<header class="index">
 				<div class = "main">
 					<div class = "logo">
 						<img src="media/logo.png" alt="Logo">
