fixed resume on aboutme

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -22,7 +22,7 @@
 							<a href="#">My Work</a>
 						</li>
 						<li>
-							<a href=resume/Resume.pdf>Resume</a>
+							<a href=../resume/Resume.pdf>Resume</a>
 						</li>
 					</ul>
 				</div>
