--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	
-		<link rel="stylesheet" type="text/css" href="style.css">
-			<meta charset="utf-8" />
-			<title> Aidan Roberts </title>
-		</head>
-		<body>
-			<header class="index">
-				<div class = "main">
-					<div class = "logo">
-						<img src="media/logo.png" alt="Logo">
+		<meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" name="viewport">
+			<link rel="stylesheet" type="text/css" href="style.css">
+				<meta charset="utf-8" />
+				<title> Aidan Roberts </title>
+			</head>
+			<body>
+				<header class="index">
+					<div class = "main">
+						<div class = "logo">
+							<img src="media/logo.png" alt="Logo">
+							</div>
+							<ul>
+								<li class="active">
+									<a href="#">Home</a>
+								</li>
+								<li>
+									<a href=aboutme/aboutme.html>About</a>
+								</li>
+								<li>
+									<a href="#">My Work</a>
+								</li>
+								<li>
+									<a href=resume/Resume.pdf>Resume</a>
+								</li>
+							</ul>
 						</div>
-						<ul>
-							<li class="active">
-								<a href="#">Home</a>
-							</li>
-							<li>
-								<a href=aboutme/aboutme.html>About</a>
-							</li>
-							<li>
-								<a href="#">My Work</a>
-							</li>
-							<li>
-								<a href=resume/Resume.pdf>Resume</a>
-							</li>
-						</ul>
-					</div>
-					<div class="title">
-						<img src="media/name.png" alt="Name">
-						</div>
-					</header>
+						<div class="title">
+							<img src="media/name.png" alt="Name">
+							</div>
+						</header>
 
-					<!--<footer>&copy; Aidan Roberts, 2020</footer>-->
-				</body>
-			</html>
+						<!--<footer>&copy; Aidan Roberts, 2020</footer>-->
+					</body>
+				</html>
