--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -7,7 +7,7 @@
 				<title> Aidan Roberts - About </title>
 			</head>
 
-			<header class="aboutme">
+			<header id="aboutme">
 				<div class = "main">
 					<div class = "logo">
 						<img src="../media/logo.png" alt="Logo">
