--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
 				<div class = "logo">
 					<img src="media/logo.png" alt="Logo">
 				</div>
-				<ul>
-					<li class="active">
-						<a href="#">Home</a>
-					</li>
-					<li>
-						<a href=aboutme/aboutme.html>About</a>
-					</li>
-					<li>
-						<a href="#">My Work</a>
-					</li>
-					<li>
-						<a href=resume/Resume.pdf>Resume</a>
-					</li>
-				</ul>
+				<nav>
+					<ul>
+						<li class="active">
+							<a href="#">Home</a>
+						</li>
+						<li>
+							<a href=aboutme/aboutme.html>About</a>
+						</li>
+						<li>
+							<a href="#">My Work</a>
+						</li>
+						<li>
+							<a href=resume/Resume.pdf>Resume</a>
+						</li>
+					</ul>
+				</nav>
+
+				
 			</div>
 			<div class="title">
 				<img src="media/name.png" alt="Name">
