scaling stuff for mobile better on aboutme

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -49,7 +49,7 @@
 				</div>			
 				<div>
 					<p>
-						I am on the D1 Overwatch team at RIT as a Substitute for the Tank role. As a Tank, it is my job to lead my team and shot-call more than everyone else. I have to know the ins and outs of the game, as well as games in general, at an extremely high level. I understand game balance and am good with giving feedback because of this.
+						I am on the D1 Overwatch team at RIT as a Substitute for the Tank role. As a Tank, it is my job to lead my team and shot-call more than everyone else. I understand game balance and am good with giving feedback because of this.
 					</p>
 				</div>
 			</div>
