--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 										<a href=aboutme/aboutme.html>About</a>
 									</li>
 									<li>
-										<a href="#">My Work</a>
+										<a href=https://aroberts629.itch.io/>My Work</a>
 									</li>
 									<li>
 										<a href=resume/Resume.pdf>Resume</a>
