updated aboutme text

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -40,16 +40,7 @@
 				</div>
 				<div>
 					<p>
-						My name is Aidan Roberts. I'm 19 years old and majoring in Game Design & Development at Rochester Institute of Technology. I have always had a passion for video games, whether it's playing casually or professionally, or even creating them.
-					</p>
-				</div>
-				<div>
-					<h2>Overwatch</h2>
-	
-				</div>			
-				<div>
-					<p>
-						I am on the D1 Overwatch team at RIT for the Tank role. As Tank, I shot-call and target-call more than others, and have the team rely on my direction heavily.
+						I'm 20 years old majoring in Game Design & Development at Rochester Institute of Technology. I am mainly a programmer, however I am definitely flexible. I am proficient in C#, Java, Javascript, and HTML/CSS (which I made this page in!). In terms of software, there's a good list on my Resume, however I've mainly worked with Unity and Monogame in terms of development platforms. I've also played multiple games at a highly competitive level, including this past year, where I played Offtank for the D1 Overwatch Team at my college.
 					</p>
 				</div>
 			</div>
