--- a/index.html
+++ b/index.html
@@ -39,4 +39,11 @@
 
 						<!--<footer>&copy; Aidan Roberts, 2020</footer>-->
 					</body>
+					<script>
+
+	let navbar = document.querySelector("nav");
+
+	$("ul").center();
+
+</script>
 				</html>
